--- a/_posts/2020-01-02-HealthMe.md
+++ b/_posts/2020-01-02-HealthMe.md
@@ -5,6 +5,10 @@ title: UX/UI Design App Konzept
 
 Mit der App HealthMe sollen Anwender, die regelmäßig Medikamente einnehmen, in deren Handhabung unterstützt werden. Durch die Hilfe bei der Medikation können Risiken minimiert werden. Die Entwicklung folgte den vier Schritten des User-Centered-Design Ansatzes.
 
+![placeholder](src="images/HealthMe.png" "Large example image")
+
+<img src="images/HealthMe.png" alt="healthapp">
+
 Hyde is a brazen two-column [Jekyll](http://jekyllrb.com) theme that pairs a prominent sidebar with uncomplicated content. It's based on [Poole](http://getpoole.com), the Jekyll butler.
 
 ### Built on Poole
